# link-api

./: .gitignore  README.md  clustered_items.csv  db_create.py  docker-compose.yml  link_job.py  linking_model_dev.ipynb  main.py  pairs.csv  pyproject.toml  test_splink.ipynb
core/: config.py  database.py
crud/: base  base.py
endpoints/: api.py  dependencies.py
endpoints/routers/: item.py
models/: base.py  item.py  item_cluster.py  item_cluster_snapshot.py
schemas/: item.py
services/: item.py  link_job.py
