[project]
name = "link-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "ipykernel>=7.1.0",
    "networkx[default]>=3.6.1",
    "openai>=2.11.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.27",
]
